# code-samples

./: README.md
old-sdks/python/python-images/: README.md  flake.nix
old-sdks/python/todo_list/: .gitignore
old-sdks/rust/rust-golembase-images/: .env  .gitignore  Cargo.toml
old-sdks/rust/rust-golembase-images/src/: main.rs
old-sdks/rust/rust-quickstart/: Cargo.toml  flake.nix
old-sdks/rust/rust-quickstart/src/: image_app.rs
old-sdks/typescript/golembase-images/backend/: flake.nix  package-lock.json  tsconfig.json
old-sdks/typescript/typescript_quickstart/: package.json
old-sdks/typescript/typescript_quickstart/src/: index.ts
old-sdks/typescript/typescript_wallets/: package-lock.json  package.json  tsconfig.json
old-sdks/typescript/typescript_wallets/src/: index.ts  wallet_json.ts  wallet_privatekey.ts
old-sdks/typescript/typescript_wallets/test/: wallet_privatekey.test.ts
python/python-golembase-images/: README.md
python/python-images/: main.py  private.key
python/quick-samples/python-intro/: README.md  main.py
python/todo_list/: README.md  main.py
rust/rust-quickstart/: .env
rust/rust-quickstart/src/: main.rs  utils.rs
typescript/golembase-images/: private.key
typescript/golembase-images/backend/: package.json
typescript/golembase-images/frontend/: flake.nix
typescript/typescript_quickstart/: package-lock.json
typescript/typescript_quickstart/src/: stuff.ts  wallet.ts
typescript/typescript_wallets/: jest.config.js
typescript/typescript_wallets/src/: prompt_password.ts
(+3 files in other folders)
