[package]
name = "rust_starter_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
golem-base-sdk = { git = "https://github.com/Golem-Base/rust-sdk.git" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde_json = "1.0"
serde = "1.0"
alloy-primitives = "1.3.1"
hex = "0.4.3"
dotenvy = "0.15"
dirs = "6.0"
bytes = "1.10"